# rightmove-scrape

./: .gitignore  Dockerfile  README.md  config.py  create_db.py  docker-compose.yml  env  pyproject.toml  todo.md
app/: create_db.py  main_page.py
app/pages/: results_page.py
rightmove_scrape/: config.py  get_from_db.py  insert_to_db.py  schemas.py  scrape.py
