[tool.poetry]
name = "rightmove-price-dashboard"
version = "0.1.0"
description = "Dashboard to scrape and monitor Rightmove property prices"
authors = ["Duncan-Hunter <dunchunter@hotmail.co.uk>"]
readme = "README.md"
packages = [{include = "rightmove_scrape"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.15.2"
psycopg2 = "^2.9.5"
pandas = "^1.5.2"
python-decouple = "^3.6"
seaborn = "^0.12.1"
rightmove-webscraper = "^1.1.2"
sqlalchemy = "1.4.46"


[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
